2014-03-14 Roman
- FIX:Transport.Sockets: Connections frequence limit fix for ConectTimeout into miliseconds.
- FIX:DAQ.LogicLev: Reflection type is fixed and expanded for connection to target parameter update and attributes list sync
    into calc period.


2014-03-12 Roman
- DAQ.ModBus: Remove connection try from controller's object start().
- DAQ.OPC_UA: TranslateBrowsePathsToNodeIds is implement for hierachical part (OpcUa_HierarchicalReferences) request process.
- Transport.Sockets: Connections frequence is limited to 2xConectTimeout, for hangs at connection timeouts decrease.
- FIX:UI.Vision: Disable AcceptTouchEvents for primitive "Document", implement by WebKit, for fix Mouse events lock at some sensors.


2014-03-11 Roman
- DAQ.Comedi: Several subdevices into equal types support is added, like for TTL and relay DIO.


2014-03-07 Roman
- DAQ.OPC_UA: OpcUa_Server_NamespaceArray append into OpenSCADA module is added. NS_OPC_UA(0) and NS_SERVER(1) is added.
    Browse allow is added for zero ReferenceTypeId.


2014-03-06 Roman
- DAQ.OPC_UA: Some NameSpaces using ordered and sync to 2055 content. For OpenSCADA_DAQ_NS set index 2.
    For sessionId set NS to 1 and for authentication Token to 0.


2014-03-05 Roman
- FIX:SYS: Close opened config file is fixed.
- FIX:Archive.FSArch: Some access control fix for prevent use packed files. fwrite() result for items is fixed.
- DAQ.ICP_DAS.LP-8x81: DIP-switch value inverted. Rotary switch implement finish and translated.
- DAQ.OPC_UA: Authentication Token NS set to 100. Session lifetime process is added.
- UI.Vision: Select-group areas control of Development mode is moved to function selAreaUpdate() and moved
	from Paint-event to particular places, mostly for fix dotted-box on selected moving for primitive
	"Document" based on WebKit.
    Set transparent background palete for the pages included to container.
    Some code clean up.


2014-03-04 Roman
- DAQ.OPC_UA: Session ID set to NS:100.